[FEATURE] JavaScript tests are now runnable via Phing test-js
Results are stored in Build/Reports/JavaScriptTests in JUnit XML format.

Furthermore, I updated the jasmine-junit connector to the latest version.

Change-Id: I66a96d132e73e48895e090385619e09d3140e2a5

--- a/JSUnit/Jasmine/test/junit_xml_reporter.html
+++ b/JSUnit/Jasmine/test/junit_xml_reporter.html
@@ -16,7 +16,7 @@
 <body>
     <script type="text/javascript">
         jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
-        jasmine.getEnv().addReporter(new jasmine.JUnitXmlReporter('/tmp/'));
+        jasmine.getEnv().addReporter(new jasmine.JUnitXmlReporter());
         jasmine.getEnv().execute();
     </script>
 </body>
